--- a/src/app/plugins/document-explorer/pages/add/add.component.html
+++ b/src/app/plugins/document-explorer/pages/add/add.component.html
@@ -8,10 +8,10 @@
         Document Explorer
       </a>
     </h3>
-    <h2 class="text-2xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-4xl mb-4">
+    <h2 class="text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-3xl mb-8">
       Add Documents
     </h2>
-    <section class="lg:w-full mb-12">
+    <section class="lg:w-full mb-4">
       <h3 class="mb-2 md:mb-4 text-xl tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-2xl">
         Documents Added
       </h3>
