--- a/src/app/plugins/document-explorer/pages/info/info.component.html
+++ b/src/app/plugins/document-explorer/pages/info/info.component.html
@@ -1,6 +1,6 @@
 <div class="relative bg-white overflow-scroll-y mx-4">
   <div class="mt-4 max-w-screen-xl mx-auto relative">
-    <h3 class="mb-0 text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:mb-4 md:text-3xl">
+    <h3 class="mb-0 text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:mb-4 md:text-2xl">
       <a
         [routerLink]="['/documents']"
         class="rounded-md text-orange-600 hover:text-orange-900 focus:text-orange-900"
@@ -8,13 +8,24 @@
         Document Explorer
       </a>
     </h3>
-    <h2 class="text-xl tracking-tight leading-10 text-gray-900 sm:leading-none md:text-2xl mb-4">
+    <h2 class="text-xl tracking-tight leading-10 text-gray-900 sm:leading-none mb-4">
       <span class="font-bold">
         Document:
       </span>
       {{ documentId }}
     </h2>
+    <h3
+      *ngIf="currentDocument && currentDocument.belongsToDocumentId"
+      class="mb-0 text-base tracking-tight leading-10 text-gray-900 sm:leading-none md:mb-4"
+      >
+      <strong class="font-bold">
+        Belongs to document:
+      </strong>
+      <a href="/documents/{{ currentDocument.belongsToDocumentId }}" class="underline">
+      {{ currentDocument.belongsToDocumentId }}</a>
+    </h3>
     <button
+      *ngIf="hasHistory()"
       class="mb-2 md:mb-4 md:mt-1 px-2 py-1 w-full md:w-auto mx-1 border border-transparent text-sm leading-6 font-medium rounded-md shadow
         text-white focus:outline-none focus:shadow-outline
         bg-green-600 hover:bg-green-500
@@ -57,6 +68,15 @@
             (click)="changeTab('viewDocument')"
             >
             View Document
+          </a>
+        </li>
+        <li *ngIf="showChildDocumentsTab" class="-mb-px mr-1">
+          <a
+            class="inline-block cursor-pointer border-l border-t border-r rounded-t py-2 px-4 font-semibold"
+            [ngClass]="{'font-bold bg-gray-200 dark-mode:bg-materialGray-600 cursor-text': currentTab == 'childDocuments'}"
+            (click)="changeTab('childDocuments')"
+            >
+            Child Documents
           </a>
         </li>
         <li *ngIf="showFormDataTab" class="-mb-px mr-1">
@@ -163,6 +183,46 @@
           id="documentFrame"
           class="border w-full"
           ></iframe>
+      </section>
+      <section *ngIf="showChildDocumentsTab" [hidden]="currentTab !== 'childDocuments'" class="border lg:w-full mb-4 md:mb-8 p-2">
+        <table
+          *ngIf="this.currentDocument.documents && this.currentDocument.documents.length"
+          class="border-collapse w-full"
+          >
+          <thead>
+            <tr>
+              <th class="p-3 font-bold uppercase bg-gray-200 text-gray-900 border border-gray-300 hidden lg:table-cell">
+                ID
+              </th>
+              <th class="p-3 font-bold uppercase bg-gray-200 text-gray-900 border border-gray-300 hidden lg:table-cell">
+                Content Type
+              </th>
+              <th class="p-3 font-bold uppercase bg-gray-200 text-gray-900 border border-gray-300 hidden lg:table-cell">
+                Content Length
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr
+              *ngFor="let childDocument of this.currentDocument.documents"
+              class="bg-white lg:hover:bg-gray-100 flex lg:table-row flex-row lg:flex-row flex-wrap lg:flex-no-wrap mb-10 lg:mb-0"
+              >
+              <td class="w-full lg:w-auto p-3 pt-8 lg:pt-3 text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
+                <span class="lg:hidden absolute top-0 left-0 bg-gray-200 px-2 py-1 text-xs font-bold uppercase">ID</span>
+                <a href="/documents/{{ childDocument.documentId }}" class="underline">
+                {{ childDocument.documentId }}</a>
+              </td>
+              <td class="w-full lg:w-auto p-3 pt-8 lg:pt-3 text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
+                <span class="lg:hidden absolute top-0 left-0 bg-gray-200 px-2 py-1 text-xs font-bold uppercase">Content Type</span>
+                {{ childDocument.contentType }}
+              </td>
+              <td class="w-full lg:w-auto p-3 pt-8 lg:pt-3 text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
+                <span class="lg:hidden absolute top-0 left-0 bg-gray-200 px-2 py-1 text-xs font-bold uppercase">Content Length</span>
+                {{ childDocument.contentLength }}
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </section>
       <section [hidden]="currentTab !== 'tags'" class="border lg:w-full mb-4 md:mb-8 p-2">
         <div *ngIf="tagResults$ | async as results" class="text-center">
