--- a/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
+++ b/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
@@ -1,8 +1,11 @@
 
 <section [hidden]="showSearchFields" class="lg:w-full mb-12">
-  <h3 class="mb-2 md:mb-8 text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-3xl">
+  <h3 class="mb-2 text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-3xl">
     Untagged Documents
   </h3>
+  <h5 class="mt-4 md:mb-8 font-bold">
+    Untagged Documents are documents that have been added without any tags. By marking them as “untagged”, FormKiQ makes it easy to find documents that have not be categorized.
+  </h5>
 </section>
 <section [hidden]="!showSearchFields" class="lg:w-full mb-8">
   <h3 class="mb-2 md:mb-8 text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-3xl">
@@ -137,7 +140,7 @@
           </div>
           <div class="flex flex-wrap -mx-1 mt-2">
             <button
-              class="px-8 py-2 w-full mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
+              class="px-4 py-2 w-full mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
               text-white focus:outline-none focus:shadow-outline
               bg-green-600 hover:bg-green-500
               transition duration-150 ease-in-out md:text-lg"
@@ -150,7 +153,7 @@
       </div>
       <div class="md:w-1/4 pt-2 md:pt-0 text-center">
         <button
-          class="px-8 py-2 mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
+          class="px-4 py-2 mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
             text-white focus:outline-none focus:shadow-outline
             bg-green-600 hover:bg-green-500
             transition duration-150 ease-in-out md:text-lg"
@@ -165,7 +168,7 @@
       </div>
       <div class="md:w-1/2 lg:w-1/3">
         <button
-          class="px-8 py-2 w-full md:w-auto mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
+          class="px-4 py-2 w-full md:w-auto mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
             text-white focus:outline-none focus:shadow-outline
             transition duration-150 ease-in-out md:text-lg"
           [disabled]="this.dateSearchForm.invalid"
@@ -238,7 +241,7 @@
       </div>
       <div class="md:w-1/4">
         <button
-          class="px-8 py-2 w-full md:w-auto mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
+          class="px-4 py-2 w-full md:w-auto mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
             text-white focus:outline-none focus:shadow-outline
             transition duration-150 ease-in-out md:text-lg"
           (click)="runTagSearch()"
@@ -253,7 +256,7 @@
       </div>
       <div class="md:w-1/2 mt-1 md:mt-0">
         <button
-          class="px-8 py-2 w-full md:w-auto mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
+          class="px-4 py-2 w-full md:w-auto mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
             text-white focus:outline-none focus:shadow-outline
             bg-green-600 hover:bg-green-500
             transition duration-150 ease-in-out md:text-lg"
@@ -275,7 +278,7 @@
           Document ID
         </label>
       </div>
-      <div class="md:w-1/2 lg:w-1/3">
+      <div class="md:w-1/2 lg:w-2/3">
         <input
           aria-label="Document ID"
           name="documentId"
@@ -293,7 +296,7 @@
       </div>
       <div class="md:w-1/4">
         <button
-          class="px-8 py-2 w-full md:w-auto mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
+          class="px-4 py-2 w-full md:w-auto mx-1 border border-transparent text-base leading-6 font-medium rounded-md shadow
             text-white focus:outline-none focus:shadow-outline
             transition duration-150 ease-in-out md:text-lg"
           (click)="runIdSearch()"
