--- a/src/app/plugins/document-explorer/components/share-modal/share-modal.component.html
+++ b/src/app/plugins/document-explorer/components/share-modal/share-modal.component.html
@@ -15,12 +15,22 @@
         </div>
       </div>
       <section>
-        <h6 class="mb-2 md:mb-4 text-lg tracking-tight font-semibold text-gray-900 sm:leading-none md:text-xl">
+        <h6 class="mb-2 md:mb-4 text-lg tracking-tight font-semibold text-gray-900 sm:leading-none">
           Share this link (expires in 48 hours):
         </h6>
-        <textarea #shareUrlTextarea rows="8" class="font-mono w-full">{{ shareUrl }}</textarea>
+        <textarea #shareUrlTextarea id="shareUrlTextarea" rows="8" class="font-mono w-full">{{ shareUrl }}</textarea>
       </section>
       <div class="flex justify-end pt-2">
+        <button
+          class="md:mt-1 px-6 py-1 w-full md:w-auto mx-1 border border-transparent text-sm leading-6 font-medium rounded-md shadow
+            text-white focus:outline-none focus:shadow-outline
+            bg-green-600 hover:bg-green-500
+            transition duration-150 ease-in-out md:text-base"
+          (click)="copyShareLinkToClipboard('clipboardMessage-shareUrl')"
+          >
+          Copy Link
+        </button>
+        <span id="clipboardMessage-shareUrl" class="hidden text-sm bg-green-200 px-2 py-1 -mt-4 absolute">copied to clipboard</span>
         <button
           class="md:mt-1 px-6 py-1 w-full md:w-auto mx-1 border border-transparent text-sm leading-6 font-medium rounded-md shadow
             text-white focus:outline-none focus:shadow-outline
