--- a/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
+++ b/src/app/plugins/document-explorer/components/searchbar/searchbar.component.html
@@ -1,6 +1,6 @@
 
 <section [hidden]="showSearchFields" class="lg:w-full mb-12">
-  <h3 class="mb-2 text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-3xl">
+  <h3 class="mb-2 text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-2xl">
     Untagged Documents
   </h3>
   <h5 class="mt-4 md:mb-8 font-bold">
@@ -11,7 +11,7 @@
   <h3 class="mb-2 md:mb-8 text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-3xl">
     Document Search
   </h3>
-  <ul class="list-reset flex border-b text-xl mb-2 md:mb-4">
+  <ul class="list-reset flex border-b text-lg mb-2 md:mb-4">
     <li class="-mb-px mr-1">
       <a
         class="inline-block cursor-pointer border-l border-t border-r rounded-t py-2 px-4 font-semibold"
