--- a/src/app/plugins/api-explorer/pages/explore/explore.component.html
+++ b/src/app/plugins/api-explorer/pages/explore/explore.component.html
@@ -1,11 +1,11 @@
 <div class="relative bg-white overflow-scroll-y mx-4">
   <div class="mt-8">
     <div class="max-w-screen-xl mx-auto relative">
-      <h2 class="text-2xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-4xl mb-4">
+      <h2 class="text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-2xl mb-4">
         API Explorer
       </h2>
       <nav class="ml-8 lg:w-full mb-8 md:mb-16">
-        <ul class="list-disc list-inside text-lg md:text-2xl">
+        <ul class="list-disc list-inside text-lg md:text-xl">
           <li>
             <a
               [routerLink]="['/api']"
@@ -59,7 +59,7 @@
         </ul>
       </nav>
       <section class="lg:w-full mb-12">
-        <h3 #headerDocuments class="md:mx-4 mb-8 text-2xl tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-4xl">
+        <h3 #headerDocuments class="md:mx-4 mb-8 text-xl tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-2xl">
           Documents
         </h3>
         <app-api-item id="GET-documents" [apiItem]="getDocumentsApiItem"></app-api-item>
@@ -82,13 +82,13 @@
         <app-api-item id="GET-document-upload" [apiItem]="getDocumentUploadApiItem" [isCollapsed]="true"></app-api-item>
       </section>
       <section class="lg:w-full mb-12">
-        <h3 #headerSearch class="mx-4 mb-8 text-3xl tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-4xl">
+        <h3 #headerSearch class="mx-4 mb-8 text-xl tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-2xl">
           Search
         </h3>
         <app-api-item id="POST-search" [apiItem]="postSearchApiItem"></app-api-item>
       </section>
       <section class="lg:w-full mb-12">
-        <h3 #headerSites class="mx-4 mb-8 text-3xl tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-4xl">
+        <h3 #headerSites class="mx-4 mb-8 text-xl tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-2xl">
           Sites
         </h3>
         <app-api-item id="GET-sites" [apiItem]="getSitesApiItem"></app-api-item>
@@ -97,7 +97,7 @@
         *ngIf="configurationService.formkiqEdition && (configurationService.formkiqEdition === 'pro' || configurationService.formkiqEdition === 'enterprise')"
         class="lg:w-full mb-12"
         >
-        <h3 #headerPresets class="mx-4 mb-8 text-3xl tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-4xl">
+        <h3 #headerPresets class="mx-4 mb-8 text-xl tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-2xl">
           Presets
         </h3>
         <app-api-item id="GET-presets" [apiItem]="getPresetsApiItem"></app-api-item>
@@ -108,7 +108,7 @@
         <app-api-item id="DELETE-preset-tag" [apiItem]="deletePresetTagApiItem" [isCollapsed]="true"></app-api-item>
       </section>
       <section class="lg:w-full mb-12">
-        <h3 #headerVersion class="mx-4 mb-8 text-3xl tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-4xl">
+        <h3 #headerVersion class="mx-4 mb-8 text-xl tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-2xl">
           Version
         </h3>
         <app-api-item id="GET-version" [apiItem]="getVersionApiItem"></app-api-item>
