--- a/src/app/plugins/document-explorer/pages/add/add.component.html
+++ b/src/app/plugins/document-explorer/pages/add/add.component.html
@@ -1,18 +1,18 @@
 <div class="relative bg-white overflow-scroll-y mx-4">
   <div class="mt-4 max-w-screen-xl mx-auto relative">
-    <h3 class="mb-0 text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:mb-4 md:text-3xl">
+    <h3 class="mb-0 text-lg tracking-tight leading-10 font-bold text-gray-900 sm:leading-none mb-4 md:text-xl">
       <a
         [routerLink]="['/documents']"
-        class="rounded-md text-orange-600 hover:text-orange-900 focus:text-orange-900"
+        class="rounded-md"
         >
         Document Explorer
       </a>
     </h3>
-    <h2 class="text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-3xl mb-8">
+    <h2 class="text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-2xl mb-4 md:mb-8">
       Add Documents
     </h2>
-    <section class="lg:w-full mb-4">
-      <h3 class="mb-2 md:mb-4 text-xl tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-2xl">
+    <section class="lg:w-full mb-2 md:mb-4">
+      <h3 class="mb-2 md:mb-4 text-lg tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-xl">
         Documents Added
       </h3>
       <table class="border-collapse w-full">
@@ -68,7 +68,7 @@
       </table>
     </section>
     <section class="relative lg:w-full mb-4 md:mb-8">
-      <h3 class="mb-2 md:mb-4 text-xl tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-2xl">
+      <h3 class="mb-2 md:mb-4 text-lg tracking-tight leading-10 font-bold text-orange-600 sm:leading-none md:text-xl">
         Upload New
       </h3>
       <div #dropzone id="dropzone" class="flex flex-columns flex-wrap dropzone w-full h-full max-h-full flex-grow-0"></div>
