--- a/src/app/plugins/document-explorer/pages/explore/explore.component.html
+++ b/src/app/plugins/document-explorer/pages/explore/explore.component.html
@@ -1,9 +1,9 @@
 <div class="relative bg-white overflow-scroll-y mx-4">
   <div class="mt-8">
     <div class="max-w-screen-xl mx-auto relative">
-      <h2 class="text-2xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none mb-4">
+      <h3 class="mb-0 text-lg tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:mb-4 md:text-xl">
         Document Explorer
-      </h2>
+      </h3>
       <app-searchbar
         #searchbar
         [currentPage]="currentPage"
