--- a/src/app/plugins/tagging-tool/pages/screen/screen.component.html
+++ b/src/app/plugins/tagging-tool/pages/screen/screen.component.html
@@ -24,6 +24,35 @@
     </option>
   </select>
 </div>
+<div *ngIf="showInfoModal()" class="absolute top-0 left-0 w-screen h-screen z-50" style="background-color: rgba(0, 0, 0, 0.5)">
+  <div class="bg-yellowGray-500 absolute w-full h-full md:w-1/2 md:h-auto md:top-1/4 md:left-1/4 rounded shadow-lg z-50 overflow-y-auto">
+    <div class="py-4 text-left px-6">
+      <h2 class="text-2xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-3xl mb-6">
+        Document Tagging Tool
+      </h2>
+      <h3 class="text-xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none">
+        Adding tags to documents makes it easy to categorize them, allowing you the ability to search based on those tags.
+      </h3>
+      <p class="mt-4">
+        Any documents that are added without tags are automatically tagged as UNTAGGED. Once you have done tagging an Untagged Document, you can click the "MARK AS TAGGED" button and continue to the next Untagged Document.
+      </p>
+      <p class="mt-4">
+        (You can also use the tagging tool to add, edit, or delete tags for Tagged Documents.)
+      <p>
+    </div>
+    <div class="flex justify-center items-center mb-2 md:mb-4">
+      <button
+        class="md:mt-1 px-6 py-1 w-full md:w-auto mx-1 border border-transparent text-sm leading-6 font-medium rounded-md shadow
+          text-white focus:outline-none focus:shadow-outline
+          bg-green-600 hover:bg-green-500
+          transition duration-150 ease-in-out md:text-base"
+        (click)="closeInfoModal()"
+        >
+        OK
+      </button>
+    </div>
+  </div>
+</div>
 <div
   class="md:flex md:items-center mx-4 mb-4 relative"
   >
@@ -267,7 +296,7 @@
           <button
             *ngIf="currentDocumentIsMarkedUntagged"
             (click)="markAsTagged()"
-            class="w-full mb-4 p-2 border border-transparent text-lg tracking-tight leading-6 font-medium rounded-md shadow
+            class="w-full mb-4 p-1 border border-transparent text-lg tracking-tight leading-6 font-medium rounded-md shadow
               text-white focus:outline-none focus:shadow-outline
               bg-green-600 hover:bg-green-500
               transition duration-150 ease-in-out"
@@ -277,8 +306,18 @@
               (and Go To Next)
             </span>
           </button>
+          <button
+            *ngIf="!currentDocumentIsMarkedUntagged"
+            (click)="viewInfo()"
+            class="w-full mb-4 p-1 border border-transparent text-lg tracking-tight leading-6 font-medium rounded-md shadow
+              text-white focus:outline-none focus:shadow-outline
+              bg-green-600 hover:bg-green-500
+              transition duration-150 ease-in-out"
+            >
+            Done
+          </button>
         </div>
-        <h2 class="text-2xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none md:text-4xl mb-4">
+        <h2 class="text-2xl tracking-tight leading-10 font-bold text-gray-900 sm:leading-none mb-4">
           Document Tagging
           <span *ngIf="currentDocument" class="mt-2 block text-lg tracking-tight">
             Document:
