--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -497,6 +497,64 @@
       </li>
     </div>
     <li
+      [ngClass]="{'font-bold bg-orange-900': currentUrl == '/api/#webhooks' }"
+      class="block pl-6 pr-2 py-2 text-base font-medium text-yellowGray-500 hover:bg-orange-700
+        focus:outline-none focus:text-yellowGray-500 focus:bg-orange-800"
+      >
+      <a
+        [routerLink]="['/api']"
+        fragment="webhooks"
+        (click)="emitSidebarItemClick('apiHeaderWebhooksClicked')"
+        class="cursor-pointer"
+        >
+        Webhooks
+      </a>
+    </li>
+    <div *ngIf="currentUrl && currentUrl.indexOf('/api') > -1 && currentUrl.indexOf('webhooks') > 4">
+      <li
+        [ngClass]="{'font-bold bg-orange-900': currentUrl == '/api#GET-webhooks' }"
+        class="block pl-8 pr-2 py-1 text-base tracking-tight font-medium text-yellowGray-500 hover:bg-orange-700
+          focus:outline-none focus:text-yellowGray-500 focus:bg-orange-800"
+        >
+        <a
+          [routerLink]="['/api']"
+          fragment="GET-webhooks"
+          (click)="emitSidebarItemClick('apiGetWebhooksClicked')"
+          class="cursor-pointer"
+          >
+          GET /webhooks
+        </a>
+      </li>
+      <li
+        [ngClass]="{'font-bold bg-orange-900': currentUrl == '/api#POST-webhooks' }"
+        class="block pl-8 pr-2 py-1 text-base tracking-tight font-medium text-yellowGray-500 hover:bg-orange-700
+          focus:outline-none focus:text-yellowGray-500 focus:bg-orange-800"
+        >
+        <a
+          [routerLink]="['/api']"
+          fragment="POST-webhooks"
+          (click)="emitSidebarItemClick('apiPostWebhooksClicked')"
+          class="cursor-pointer"
+          >
+          POST /webhooks
+        </a>
+      </li>
+      <li
+        [ngClass]="{'font-bold bg-orange-900': currentUrl == '/api#DELETE-webhook' }"
+        class="block pl-8 pr-2 py-1 text-base tracking-tight font-medium text-yellowGray-500 hover:bg-orange-700
+          focus:outline-none focus:text-yellowGray-500 focus:bg-orange-800"
+        >
+        <a
+          [routerLink]="['/api']"
+          fragment="DELETE-webhook"
+          (click)="emitSidebarItemClick('apiDeleteWebhookClicked')"
+          class="cursor-pointer"
+          >
+          DELETE /webhooks<strong>&#123;id&#125;</strong>
+        </a>
+      </li>
+    </div>
+    <li
       class="block px-2 py-2 text-lg font-semibold text-yellowGray-500 hover:bg-orange-700
         focus:outline-none focus:text-yellowGray-500 focus:bg-orange-800"
       >
