--- a/src/app/plugins/document-explorer/pages/info/info.component.html
+++ b/src/app/plugins/document-explorer/pages/info/info.component.html
@@ -51,13 +51,22 @@
       Back to Results
     </button>
     <button
-      class="mt-1 px-2 py-1 w-full md:w-auto mx-1 border border-transparent text-sm leading-6 font-medium rounded-md shadow
+      class="mb-2 px-2 py-1 w-full md:w-auto mx-1 border border-transparent text-sm leading-6 font-medium rounded-md shadow
         text-white focus:outline-none focus:shadow-outline
         bg-green-600 hover:bg-green-500
         transition duration-150 ease-in-out md:text-base"
-      (click)="openTaggingTool(currentDocument.documentId)"
+      (click)="openTaggingTool()"
       >
       Open in Tagging Tool
+    </button>
+    <button
+      class="px-2 py-1 w-full md:w-auto mx-1 border border-transparent text-sm leading-6 font-medium rounded-md shadow
+        text-white focus:outline-none focus:shadow-outline
+        bg-green-600 hover:bg-green-500
+        transition duration-150 ease-in-out md:text-base"
+      (click)="downloadFile()"
+      >
+      Open File
     </button>
     <div *ngIf="documentInfoLoaded$ | async as loaded" class="mt-4 md:mt-0">
       <ul class="list-reset flex flex-wrap">
