changed to "open as file"

--- a/src/app/plugins/document-explorer/pages/info/info.component.html
+++ b/src/app/plugins/document-explorer/pages/info/info.component.html
@@ -66,7 +66,7 @@
         transition duration-150 ease-in-out md:text-base"
       (click)="downloadFile()"
       >
-      Open File
+      Open As File (New Tab)
     </button>
     <div *ngIf="documentInfoLoaded$ | async as loaded" class="mt-4 md:mt-0">
       <ul class="list-reset flex flex-wrap">
